# AerialRobotics

./: .gitignore
assignment1/: 2021-09-10-11-22-45.bag  2021-09-21-19-31-13.bag.active  2021-09-21-19-57-22.bag.active  README.md
assignment1/src/: .rosinstall  .rosinstall.bak
assignment1/src/offboard_UMD/: CMakeLists.txt  package.xml
assignment1/src/offboard_UMD/include/: sensors.h  takeoff.h
assignment1/src/offboard_UMD/launch/: assignment1.launch
assignment1/src/offboard_UMD/msg/: Cycle.msg
assignment1/src/offboard_UMD/script/: 2021-09-10-11-31-59.bag  2021-09-21-19-19-58.bag  2021-09-21-19-57-22.bag  2021-09-21-21-27-59.bag  plot_position.py
assignment1/src/offboard_UMD/src/: offboard.cpp  sensors.cpp  takeoff.cpp
final_project_ws/: README.md
final_project_ws/src/mavros_test/: CMakeLists.txt  package.xml
final_project_ws/src/mavros_test/launch/: mavros_test.launch
final_project_ws/src/mavros_test/src/: mavros_test_node.cpp
final_project_ws/src/tf_transforms/: CMakeLists.txt  package.xml
final_project_ws/src/tf_transforms/launch/: urdf.launch
final_project_ws/src/tf_transforms/scripts/: .ros_aruco.py.swo  aruco.py  camera.py  mp.py  np_basics.py  ros_aruco.py  simple_mp.py  target_kf.py
final_project_ws/src/track_and_land/: CMakeLists.txt  package.xml
final_project_ws/src/track_and_land/launch/: initialize.launch  tf.launch  tunning.launch
final_project_ws/src/track_and_land/scripts/: .ros_aruco.py.swp  pid.py  target_kf.py
final_project_ws/src/track_and_land/src/: body_pose_node.cpp
final_project_ws/src/track_and_land/urdf/: drone.urdf
